--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -8,7 +8,7 @@
 </head>
 <body>
  <div class="container">
-    <div class="box"></div>
+    <div class="box">item 1</div>
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
